# encryp-base

./: .gitignore  CMakeLists.txt  OPERATIONS.md  README.md  ROADMAP.md  TASKS.md
.github/workflows/: ci.yml
doc/: mobile_device_verification.md  sqlite_encryption_package_design.md
include/encsqlite/: api.h  codec.h  connection.h  crypto.h  encsqlite_build_info.h  page_format.h
scripts/: fetch_sqlite.sh  verify_android_device.sh
src/: encsqlite_api.c  encsqlite_build_info.c  encsqlite_codec.c  encsqlite_connection.c  encsqlite_crypto.c  encsqlite_page_format.c
tests/: test_api.c  test_benchmark.c  test_build.c  test_codec.c  test_connection.c  test_corruption.c  test_crypto.c  test_differential.c  test_page_format.c  test_policy.c
wrappers/: README.md
wrappers/android/: .gitignore  CMakeLists.txt  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
wrappers/android/src/androidTest/java/io/github/kazuyoshitoshiya/encrypbase/android/: EncSQLiteAndroidStorageTest.kt  EncSQLiteDirectBootHarnessTest.kt  EncSQLiteStatementTypeTest.kt  EncSQLiteUserUnlockStateTest.kt
wrappers/android/src/main/: AndroidManifest.xml
wrappers/android/src/main/cpp/: encsqlite_jni.c
wrappers/android/src/main/kotlin/io/github/kazuyoshitoshiya/encrypbase/android/: EncSQLite.kt  EncSQLiteDirectBootHarness.kt  EncSQLiteDirectBootReceiver.kt  EncSQLiteKeyStore.kt  EncSQLiteUserUnlockState.kt
wrappers/ios/: Package.swift  README.md
wrappers/ios/Sources/CEncSQLite/: shim.c
wrappers/ios/Sources/CEncSQLite/include/: EncSQLite.h  encsqlite  sqlite3.h  sqlite3ext.h
wrappers/ios/Sources/EncSQLite/: EncSQLite.swift  EncSQLiteKeychain.swift  EncSQLiteProtectedData.swift
wrappers/ios/Tests/EncSQLiteTests/: EncSQLiteTests.swift  KeychainTests.swift  ProtectedDataTests.swift
